legacy/additional_testing/gcc_crash_stats/results/gcc482/save_st/pr56540.c-4.8.2-0.out.txt
pr56540.c:4:14: error: ‘__SIZEOF_FPREG__’ undeclared here (not in a function)
 extern int a[__SIZEOF_FPREG__ != sizeof (__fpreg) ? -1 : 1];
              ^
pr56540.c:4:42: error: ‘__fpreg’ undeclared here (not in a function)
 extern int a[__SIZEOF_FPREG__ != sizeof (__fpreg) ? -1 : 1];
                                          ^
pr56540.c:5:14: error: ‘__SIZEOF_FLOAT80__’ undeclared here (not in a function)
 extern int b[__SIZEOF_FLOAT80__ != sizeof (__float80) ? -1 : 1];
              ^
pr56540.c:6:14: error: ‘__SIZEOF_FLOAT128__’ undeclared here (not in a function)
 extern int c[__SIZEOF_FLOAT128__ != sizeof (__float128) ? -1 : 1];
              ^
